# rustycoat

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: clocked_led.rs  rtest.rs
rtest/: Cargo.toml
rtest/src/: main.rs
rustycoat/: Cargo.toml
rustycoat/src/: lib.rs  macros.rs
rustycoat/src/core/: clock.rs  memory.rs  mod.rs  ports.rs
rustycoat/src/cpus/: c6502.rs  c6502_tests.rs  mod.rs
rustycoat/src/gates/: mod.rs
src/: lib.rs
src/core/: clock.rs  memory.rs  mod.rs  ports.rs
src/cpus/: c6502.rs  c6502_tests.rs
src/gates/: mod.rs
src/widgets/: leds.rs  mod.rs
