[package]
name = "rustycoat"
description = "Rustycoat library"
version = "0.1.0"
authors = ["Shanku Niyogi <shanku@freerange.dev>"]
homepage = "https://github.com/freerange-dev/rustycoat"
license = "MIT"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
ctrlc = "3.2"
iui = { git = "https://github.com/rust-native-ui/libui-rs", branch = "master" }